[tool.poetry]
name = "sceptre-cmd-resolver"
version = "2.0.0"
description = "Sceptre resolver to execute generic shell commands"
authors = ["Luke Plausin <sceptre@cloudreach.com>"]
readme = "README.md"
homepage = "https://github.com/Sceptre/sceptre-resolver-cmd"
license = "Apache-2.0"
packages = [{ include = "resolver" }]
keywords = ["sceptre", "sceptre-resolver"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Environment :: Console",
]

[tool.poetry.dependencies]
python = "^3.8"
sceptre = ">=4.0.1"

[tool.poetry.group.dev.dependencies]
parameterized = "^0.9.0"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[tool.poetry.plugins."sceptre.resolvers"]
rcmd = "resolver.rcmd:SceptreResolverCmd"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
