[tool.poetry]
name = "sceptre-cmd-resolver"
version = "2.0.0"
description = "Sceptre resolver to execute generic shell commands"
authors = ["Luke Plausin <sceptre@cloudreach.com>"]
readme = "README.md"
homepage = "https://github.com/Sceptre/sceptre-resolver-cmd"
license = "Apache-2.0"
packages = [{ include = "resolver" }]
keywords = ["sceptre", "sceptre-resolver"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Environment :: Console",
]

[tool.poetry.plugins."sceptre.resolvers"]
rcmd = "resolver.rcmd:SceptreResolverCmd"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
parameterized = "^0.9.0"
pre-commit = "^3.2.1"
tox = "^3.23.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
sceptre = "^4.0"
tox-gh-matrix = "^0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
